# hexapod_ros

./: LICENSE  LICENSE.txt  README.md  ROS_hexapod.dot  index.html  params.json
dynamixel_sdk/: CHANGELOG.rst  CMakeLists.txt  package.xml
dynamixel_sdk/src/: dynamixel.cpp
hexapod/: CHANGELOG.rst  CMakeLists.txt  README.rst  package.xml
hexapod_bringup/: CMakeLists.txt  hexapod_bringup.xml  package.xml
hexapod_bringup/launch/: all_local_debug.launch  complete.launch  depth_laserscan.launch  gmapping.launch  hexapod.launch  hexapod_bringup.launch  hexapod_bringup_depth_laserscan.launch  hexapod_bringup_imu.launch  hexapod_full.launch  hexapod_simple.launch  imu.launch  locomotion.launch  robot_localization_ekf.launch  rtabmap.launch  rviz.launch  visualize_rtabmap.launch
hexapod_bringup/launch/components/: depth_laserscan.launch  imu.launch  imu_phidgets.launch  joy_teleop.launch  locomotion.launch  robot_localization_ekf.launch  rtabmap.launch  simple_locomtion.launch  sounds.launch  visual_odometry.launch
hexapod_controller/: CMakeLists.txt  hexapod_controller.xml  package.xml
hexapod_controller/include/: control.h  dxl_hal.h  dynamixel.h  gait.h  ik.h  mx.h  servo_driver.h
hexapod_controller/launch/: hexapod_locomotion.launch
hexapod_controller/src/: control.cpp  gait.cpp  hexapod_controller.cpp  ik.cpp  servo_driver.cpp
hexapod_controller/src/usb2ax/: dxl_hal.cpp  dynamixel.cpp
hexapod_controller/urdf/: hexapod.urdf
hexapod_description/: CMakeLists.txt  package.xml
hexapod_description/meshes/: body.stl  coxa.stl  femur.stl  mx64.stl  tarsus.stl  tibia.stl
hexapod_description/meshes/phantomX/: body.stl
hexapod_description/meshes/razbot/: coxa.stl  femur.stl  tibia.stl
hexapod_description/params/: depth_PS1080_PrimeSense .yaml  dynamixel.yaml  hexapod.yaml  joystick.yaml  joystick_ds4.yaml  phantomX.yaml  razbot.yaml  rgb_PS1080_PrimeSense.yaml
hexapod_description/rviz_prefs/: robotViz.rviz  urdf.rviz
hexapod_description/urdf/: hexapod.gv  hexapod_model.urdf  hexapod_model.xacro  phantomX_model.xacro  razbot_model.xacro
hexapod_gazebo/: CMakeLists.txt  package.xml
hexapod_gazebo/config/: hexapod_control.yaml  phantomx_control.yaml
hexapod_gazebo/launch/: hexapod_control.launch  hexapod_gazebo.launch  phantomx_control.launch  phantomx_gazebo.launch
hexapod_msgs/: CMakeLists.txt  package.xml
hexapod_msgs/msg/: FeetPositions.msg  LegJoints.msg  LegsJoints.msg  Pose.msg  Sounds.msg  State.msg
hexapod_navigation/: CMakeLists.txt  package.xml
hexapod_navigation/config/: costmap_common.yaml  planner.yaml
hexapod_navigation/launch/: move_base.launch
hexapod_navigation/maps/: map.yaml
hexapod_sound/: CMakeLists.txt  hexapod_sound.xml  package.xml
hexapod_sound/include/: hexapod_sound.h
hexapod_sound/src/: hexapod_sound.cpp
hexapod_teleop_joystick/: CMakeLists.txt  hexapod_teleop_joystick.xml  package.xml
hexapod_teleop_joystick/include/: hexapod_teleop_joystick.h
hexapod_teleop_joystick/src/: hexapod_teleop_joystick.cpp
src/fovis/: CMakeLists.txt  package.xml
src/fovis_ros/: CMakeLists.txt  mainpage.dox  package.xml  wikidoc.txt
src/fovis_ros/launch/: fovis_hydro_openni.launch
src/fovis_ros/msg/: FovisInfo.msg
src/fovis_ros/src/: mono_depth_odometer.cpp  mono_depth_processor.hpp  odometer_base.hpp  stereo_odometer.cpp  stereo_processor.hpp  visualization.cpp  visualization.hpp
src/hexapod_odometry/: CMakeLists.txt  hexapod_odometry.xml  package.xml
src/hexapod_odometry/include/: hexapod_odometry.h
src/hexapod_odometry/src/: hexapod_odometry.cpp
src/imu_filter_madgwick/src/: imu_filter.cpp
src/joy/src/: joy_node.cpp
src/phidgets_drivers/: .gitignore  README.md
src/phidgets_drivers/phidgets_api/: CMakeLists.txt  package.xml
src/phidgets_drivers/phidgets_api/include/phidgets_api/: imu.h  ir.h  phidget.h  phidget21.h
src/phidgets_drivers/phidgets_api/share/: setup-udev.sh
src/phidgets_drivers/phidgets_api/src/: imu.cpp  ir.cpp  phidget.cpp
src/phidgets_drivers/phidgets_drivers/: CMakeLists.txt  package.xml
src/phidgets_drivers/phidgets_imu/: CMakeLists.txt  package.xml  phidgets_imu_nodelet.xml
src/phidgets_drivers/phidgets_imu/include/phidgets_imu/: imu_ros_i.h  phidgets_imu_nodelet.h
src/phidgets_drivers/phidgets_imu/launch/: imu.launch
src/phidgets_drivers/phidgets_imu/src/: imu_ros_i.cpp  phidgets_imu_node.cpp  phidgets_imu_nodelet.cpp
src/phidgets_drivers/phidgets_ir/: CMakeLists.txt  package.xml
src/phidgets_drivers/phidgets_ir/include/phidgets_ir/: ir_ros_i.h
src/phidgets_drivers/phidgets_ir/src/: ir_ros_i.cpp  phidgets_ir_node.cpp
