<?xml version="1.0"?>
<package format="2">
  <name>dynamixel_sdk</name>
  <version>3.6.2</version>
  <description>
    This package is wrapping version of ROBOTIS Dynamxel SDK for ROS. The ROBOTIS Dynamixel SDK, or SDK, is a software development library that provides Dynamixel control functions for packet communication. The API is designed for Dynamixel actuators and Dynamixel-based platforms.
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="zerom@robotis.com">Zerom</author>
  <author>Leon</author>
  <maintainer email="pyo@robotis.com">Pyo</maintainer>
  <url type="website">http://wiki.ros.org/dynamixel_sdk</url>
  <url type="emanual">http://emanual.robotis.com/docs/en/software/dynamixel/dynamixel_sdk/overview/</url>
  <url type="repository">https://github.com/ROBOTIS-GIT/DynamixelSDK</url>
  <url type="bugtracker">https://github.com/ROBOTIS-GIT/DynamixelSDK/issues</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
</package>
