<?xml version="1.0"?>
<package>
  <name>hexapod_description</name>
  <version>0.2.0</version>
  <description>Description package for a hexapod research platformfiles.</description>
  <author email="kevin.ochs@gmail.com">Kevin Ochs</author>
  <maintainer email="kevin.ochs@gmail.com">Kevin Ochs</maintainer>
  <license>BSD</license>
  
  <url type="website">http://ros.org</url>
  
  <buildtool_depend>catkin</buildtool_depend>

  <!-- definitions -->
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>

</package>
