<?xml version="1.0"?>
<package>
  <name>hexapod_msgs</name>
  <version>0.2.0</version>
  <description>The hexapod_msgs package</description>
  <author email="kevin.ochs@gmail.com">Kevin Ochs</author>
  <maintainer email="kevin.ochs@gmail.com">Kevin Ochs</maintainer>
  <license>BSD</license>

  <url type="website">http://ros.org</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <export>
    <nodelet plugin="${prefix}/hexapod_msgs.xml" />
  </export>

</package>
