<?xml version="1.0"?>
<package>
  <name>hexapod_navigation</name>
  <version>0.0.1</version>
  <description>hexapod_navigation</description>

  <author email="kevin.ochs@gmail.com">Kevin Ochs</author>
  <maintainer email="kevin.ochs@gmail.com">Kevin Ochs</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>
  </export>
</package>
