<?xml version="1.0"?>
<package>
  <name>hexapod_sound</name>
  <version>0.2.0</version>
  <description>hexapod_sound node for hexapod research platform</description>
  <author email="kevin.ochs@gmail.com">Kevin Ochs</author>
  <maintainer email="kevin.ochs@gmail.com">Kevin Ochs</maintainer>
  <license>BSD</license>
  
  <url type="website">http://ros.org</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hexapod_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sound_play</build_depend>
  <run_depend>hexapod_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sound_play</run_depend>

  <export>
    <nodelet plugin="${prefix}/hexapod_sound.xml" />
  </export>
</package>
