<?xml version="1.0"?>
<package>
  <name>hexapod_teleop_joystick</name>
  <version>0.2.0</version>
  <description>hexapod_teleop_joystick node for hexapod research platform</description>
  <author email="kevin.ochs@gmail.com">Kevin Ochs</author>
  <maintainer email="kevin.ochs@gmail.com">Kevin Ochs</maintainer>
  <license>BSD</license>
  
  <url type="website">http://ros.org</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hexapod_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>hexapod_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
    <nodelet plugin="${prefix}/hexapod_teleop_joystick.xml" />
  </export>
</package>
