<package>
  <name>fovis</name>
  <version>0.0.1</version>
  <description>
    A ROS-Wrapper for fovis, a library for visual odometry.
    Maintained by the Systems, Robotics and Vision group of the
    University of the Balearic Islands, Spain. http://srv.uib.es
  </description>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/fovis</url>
  <url type="bugtracker">https://github.com/srv/fovis/issues</url>

  <author>Stephan Wirth</author>
  <maintainer email="pl.negre@uib.cat">Pep Lluis Negre</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>fovis_ros</run_depend>

  <export>
    <metapackage/>
  </export>
</package>