<package>
  <name>fovis_ros</name>
  <version>0.0.1</version>
  <description>
    A ROS-Wrapper for fovis, a library for visual odometry.
    Maintained by the Systems, Robotics and Vision group of the
    University of the Balearic Islands, Spain. http://srv.uib.es
  </description>

  <license>GPL</license>

  <url type="website">http://ros.org/wiki/fovis_ros</url>
  <url type="bugtracker">https://github.com/srv/fovis/issues</url>

  <author>Stephan Wirth</author>
  <maintainer email="pl.negre@uib.cat">Pep Lluís Negre</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>libfovis</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pcl</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>libfovis</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pcl</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>message_runtime</run_depend>

</package>
