<?xml version="1.0"?>
<package>
  <name>hexapod_odometry</name>
  <version>0.2.0</version>
  <description>hexapod_odometry node for hexapod research platform</description>
  <author email="kevin.ochs@gmail.com">Kevin Ochs</author>
  <maintainer email="kevin.ochs@gmail.com">Kevin Ochs</maintainer>
  <license>BSD</license>
  
  <url type="website">http://ros.org</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>hexapod_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>hexapod_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>tf</run_depend>

  <export>
    <nodelet plugin="${prefix}/hexapod_odometry.xml" />
  </export>
</package>
