<?xml version="1.0"?>
<package>
  <name>phidgets_ir</name>
  <version>0.2.0</version>
  <description>Driver for the Phidgets IR device</description>

  <maintainer email="muhrix@gmail.com">Murilo F. M.</maintainer>
  <maintainer email="ccnyroboticslab@gmail.com">Ivan Dryanovski</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/phidgets_ir</url>

  <author>Ivan Dryanovski</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>phidgets_api</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>phidgets_api</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>tf</run_depend>
</package>
